# Tasker

./: .coverage  .gitignore  .pylintrc  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
config/: settings.py  urls.py
tasker_app/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
tasker_app/management/commands/: gen_fake_data.py
tasker_app/migrations/: 0001_initial.py  0002_initial.py  0002_user_alter_task_user_name.py  0003_tag_task_tags.py  0004_task_task_type_alter_task_tags.py  0005_task_status_alter_task_task_type.py
tasker_app/templates/tasker_app/: about.html  base.html  index.html  kanban.html  task_add.html  task_detail.html  task_edit.html
tasker_app/tests/: test_model_tag.py  test_model_task.py
user_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
user_app/migrations/: 0001_initial.py  0002_alter_customuser_username.py
user_app/templates/user_app/: login.html  register.html
user_app/tests/: test_model_customuser.py
