[project]
name = "tasker"
version = "0.1.0"
description = ""
authors = [
    {name = "Maviroti",email = "131587305+Maviroti@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "django (>=6.0,<7.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "celery[redis] (>=5.6.0,<6.0.0)",
    "django-celery-results (>=2.6.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "faker (>=38.2.0,<39.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
